# yt-history

./: .gitignore  LICENSE  README.md  eslint.config.mjs  main.py  package.json  pnpm-lock.yaml  pyproject.toml
app/: globals.css  layout.tsx  metadata.ts  page.tsx  robots.ts  sitemap.ts
app/dashboard/: layout.tsx  page.tsx
app/privacy/: metadata.ts  page.tsx
app/terms/: metadata.ts  page.tsx
components/: file-upload-form.tsx  migration-banner.tsx  promo-banner.tsx
components/dashboard/: achievements.tsx  channel-distribution-chart.tsx  daily-views-chart.tsx  donation-banner.tsx  fun-facts.tsx  personality-insights.tsx  social-share.tsx  stats-overview.tsx  top-videos-chart.tsx  viewing-time-chart.tsx
docs/: README.md
public/: ads.txt
rules/: project.mdc
templates/: index.html
