 [project]
name = "yt-history"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ashing", email = "axingfly@gmail.com"},
]
dependencies = [
    "flask>=3.0.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python main.py"
